--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,4 @@ InitTestScene*.unity*
 
 #Ignore the language model
 Assets/StreamingAssets/vosk-model-en-us-0.42-gigaspeech.zip
+Assets/StreamingAssets/
