--- a/.gitignore
+++ b/.gitignore
@@ -97,10 +97,8 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
-<<<<<<< HEAD
-=======
+# Ignore everything inside StreamingAssets
+Assets/StreamingAssets/*
 
-#Ignore the language model
-Assets/StreamingAssets/vosk-model-en-us-0.42-gigaspeech.zip
-Assets/StreamingAssets/
->>>>>>> development
+# But keep this placeholder so the folder itself stays
+!.gitkeep
